# plasma-dataengine-chatellerault

./: CMakeLists.txt  README  README.md  chatellerault.cpp  chatellerault.h  plasma-engine-chatellerault.desktop
